[package]
name = "serde_json_merge"
version = "0.0.6"
edition = "2021"
authors = ["romnn <contact@romnn.com>"]
description = "Merge, index, iterate, and sort a serde_json::Value (recursively)"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/serde_json_merge"
repository = "https://github.com/romnn/serde_json_merge"
categories = [ "encoding" ]
keywords = [
  "serde",
  "json",
  "merge",
  "sort",
  "iter"
]
exclude = []

[[bench]]
name = "benches"
harness = false

[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["merge"]
full = ["rayon", "sort", "merge", "preserve_order"]
preserve_order = ["serde_json/preserve_order"]
merge = []
sort = ["dep:ordered-float", "dep:indexmap"]
rayon = ["dep:par-dfs"]

[package.metadata.cargo-feature-combinations]
denylist = ["default", "full"]

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
fancy-regex = "0"
ordered-float = { version = "5", optional = true }
indexmap = { version = "2", optional = true }
par-dfs = { version = "0", features = ["sync", "rayon"], optional = true }
rayon = "1.5"

[dev-dependencies]
itertools = "0"
pretty_assertions = "1"
paste = "1"
criterion = "0"
